# modulate

./: .dockerignore  .eslintignore  .eslintrc.json  .gitignore  .prettierignore  Dockerfile  README.md  TODO.md  build.js  ecosystem.config.js  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yaml  deploy.yaml  test.yaml  typecheck.yaml
client/: package.json  tsconfig.json
client/src/: api.ts  assert.ts  audio.ts  auth.ts  classNames.ts  colors.ts  engine-test-index.ts  engine.ts  hooks.ts  icons.ts  index.tsx  module-config.ts  module-map.ts  moduleMap.ts  modules.ts  portals.tsx  reset.css  rooms.ts  routes.ts  sockets.ts  state.ts  test-attributes.ts  test-index.ts  types.ts  worklets.ts
client/static/: index.html
client/typings/: svg.d.ts
client/worklets/: ADSR.ts  Clock.ts  Delay.ts  Gain.ts  MIDI.ts  Mixer.ts  ModulationHelper.ts  Oscillator.ts  Reverb.ts  Sequencer.ts  utils.ts
common/: complex.ts  package.json  type-validators.ts  types.ts  util.ts  validators.ts
scripts/: deploy.sh
server/: .env.development  logger.ts  package.json  tsconfig.json
server/migrations/: 0001-init.js  0001-init.ts  0002-samples.ts
server/scripts/: add-migration.js  migration-template.js  (+1 more)
test/: api.test.ts  engine.test.ts  jest.config.js  package.json  playwright.config.ts
typings/: audio.d.ts  css-module.d.ts
worklets/: Cargo.toml  index.html  package.json
worklets/.cargo/: config
worklets/src/: adsr_curve.rs  audio-worklet.ts  audio_buffer.rs  audio_input.rs  audio_output.rs  audio_param.rs  barrier.rs  delay_line.rs  edge_detector.rs  index.ts  lib.rs  main-worker.ts  modulate_core.rs  module.rs  modules.ts  polyfill.js  ring_buffer.rs  rw_lock.rs  thread-worker.ts  util.rs  vec.rs  windowed_sinc.rs
worklets/src/filters/: allpass_filter.rs  biquad_filter.rs  comb_filter.rs  mod.rs
worklets/src/macros/src/: lib.rs
worklets/src/modulate-macros/: Cargo.toml
worklets/src/modules/: adsr.rs  audio_out.rs  biquad_filter.rs  bouncy_boi.rs  chorus.rs  clock.rs  delay.rs  distortion.rs  eq3.rs  fdn_reverb.rs  gain.rs  lfo.rs  limiter.rs  midi.rs  mixer.rs  mod.rs  oscillator.rs  oscilloscope.rs  piano_roll.rs  pow_shaper.rs  reverb.rs  ring_mod.rs  sampler.rs  sequencer.rs  sideq.rs  virtual_controller.rs
(+147 files in other folders)
