[package]
name = "worklets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3

[dependencies]
wasm-bindgen = "0.2.74"
js-sys = "0.3.67"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6.3"
console_error_panic_hook = "0.1.7"

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

[package.metadata.wasm-pack.profile.profiling]
wasm-opt = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
